@@ -2,17 +2,21 @@ package dev.langchain4j.model.ollama;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
-import dev.langchain4j.agent.tool.ToolParameters;
 import dev.langchain4j.agent.tool.ToolSpecification;
 import dev.langchain4j.data.message.AiMessage;
 import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.ChatMessageType;
 import dev.langchain4j.data.message.Content;
 import dev.langchain4j.data.message.ContentType;
+import dev.langchain4j.data.message.CustomMessage;
 import dev.langchain4j.data.message.ImageContent;
+import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.TextContent;
+import dev.langchain4j.data.message.ToolExecutionResultMessage;
 import dev.langchain4j.data.message.UserMessage;
+import dev.langchain4j.model.chat.request.ResponseFormat;
 import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
+import dev.langchain4j.model.chat.request.json.JsonSchemaElementHelper;
 
 import java.util.HashMap;
 import java.util.List;
@@ -25,7 +29,7 @@ import static dev.langchain4j.data.message.ContentType.IMAGE;
 import static dev.langchain4j.data.message.ContentType.TEXT;
 import static dev.langchain4j.model.chat.request.json.JsonSchemaElementHelper.toMap;
 import static dev.langchain4j.model.ollama.OllamaJsonUtils.toJson;
-import static dev.langchain4j.model.ollama.OllamaJsonUtils.toObject;
+import static dev.langchain4j.model.ollama.OllamaJsonUtils.fromJson;
 
 class OllamaMessagesUtils {
 
@@ -65,24 +69,28 @@ class OllamaMessagesUtils {
                     .properties(toMap(parameters.properties()))
                     .required(parameters.required())
                     .build();
-        } else if (toolSpecification.toolParameters() != null) {
-            ToolParameters parameters = toolSpecification.toolParameters();
-            return Parameters.builder()
-                    .properties(parameters.properties())
-                    .required(parameters.required())
-                    .build();
         } else {
             return null;
         }
     }
 
-    static List<ToolExecutionRequest> toToolExecutionRequest(List<ToolCall> toolCalls) {
+    static List<ToolExecutionRequest> toToolExecutionRequests(List<ToolCall> toolCalls) {
         return toolCalls.stream().map(toolCall ->
                         ToolExecutionRequest.builder()
                                 .name(toolCall.getFunction().getName())
                                 .arguments(toJson(toolCall.getFunction().getArguments()))
                                 .build())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    static String toOllamaResponseFormat(ResponseFormat responseFormat) {
+        if (responseFormat == null || responseFormat == ResponseFormat.TEXT) {
+            return null;
+        } else if (responseFormat == ResponseFormat.JSON && responseFormat.jsonSchema() == null) {
+            return "json";
+        } else {
+            return toJson(JsonSchemaElementHelper.toMap(responseFormat.jsonSchema().rootElement()));
+        }
     }
 
     private static Message messagesWithImageSupport(UserMessage userMessage) {
@@ -107,9 +115,14 @@ class OllamaMessagesUtils {
     }
 
     private static Message otherMessages(ChatMessage chatMessage) {
+        if (chatMessage instanceof CustomMessage customMessage) {
+            return Message.builder()
+                    .additionalFields(customMessage.attributes())
+                    .build();
+        }
+
         List<ToolCall> toolCalls = null;
-        if (ChatMessageType.AI == chatMessage.type()) {
-            AiMessage aiMessage = (AiMessage) chatMessage;
+        if (chatMessage instanceof AiMessage aiMessage) {
             List<ToolExecutionRequest> toolExecutionRequests = aiMessage.toolExecutionRequests();
             toolCalls = Optional.ofNullable(toolExecutionRequests)
                     .map(reqs -> reqs.stream()
@@ -118,7 +131,7 @@ class OllamaMessagesUtils {
                                 };
                                 FunctionCall functionCall = FunctionCall.builder()
                                         .name(toolExecutionRequest.name())
-                                        .arguments(toObject(toolExecutionRequest.arguments(), typeReference))
+                                        .arguments(fromJson(toolExecutionRequest.arguments(), typeReference))
                                         .build();
                                 return ToolCall.builder()
                                         .function(functionCall).build();
@@ -128,9 +141,23 @@ class OllamaMessagesUtils {
         }
         return Message.builder()
                 .role(toOllamaRole(chatMessage.type()))
-                .content(chatMessage.text())
+                .content(toText(chatMessage))
                 .toolCalls(toolCalls)
                 .build();
+    }
+
+    private static String toText(ChatMessage chatMessage) {
+        if (chatMessage instanceof SystemMessage systemMessage) {
+            return systemMessage.text();
+        } else if (chatMessage instanceof UserMessage userMessage) {
+            return userMessage.singleText();
+        } else if (chatMessage instanceof AiMessage aiMessage) {
+            return aiMessage.text();
+        } else if (chatMessage instanceof ToolExecutionResultMessage toolExecutionResultMessage) {
+            return toolExecutionResultMessage.text();
+        } else {
+            throw new IllegalArgumentException("Unsupported message type: " + chatMessage.type());
+        }
     }
 
     private static Role toOllamaRole(ChatMessageType chatMessageType) {
